--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="card">
-    <img class="qr-code" src="/images/image-qr-code.png">
+    <img class="qr-code" src="/images/image-qr-code.png" alt="qr code">
     <div class="content">
       <h1>
         Improve your front-end skills by building projects
